# doxa-selector-rs

./: .gitignore  Cargo.toml  NOTICE.md  README.md  build.rs  flake.nix  rust-toolchain.toml
.github/workflows/: build.yml
examples/: basic.rs
src/: controller.rs  driver.rs  lib.rs  platform.rs  route.rs  touch.rs  view.rs
src/platform/: slint_interlope.rs  slint_platform.rs
src/view/: color.rs  font.rs  image.rs  spacing.rs  ui.rs
src/view/ui/: bottom_bar.rs  brew_tab.rs  button.rs  calibrating_overlay.rs  card.rs  confirm_selection_screen.rs  diagnostics_screen.rs  select_category_screen.rs  select_route_screen.rs  select_screen.rs  selector.rs  settings_tab.rs  tab_bar.rs  toggle.rs
ui/: CategoryPicker.slint  Chip.slint  DiagnosticsPopup.slint  MainPicker.slint  MainWindow.slint  RoutePicker.slint  RoutineSelectedCard.slint
