[package]
name = "doxa-selector"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.8.0"
slint = { version = "1.14.1", optional = true, default-features = false, features = [
  "compat-1-2",
  "unsafe-single-threaded",
  "renderer-software",
  "libm",
] }
rgb = "0.8.50"
async-trait = "*"
vex-sdk = "0.27.1"

[build-dependencies]
slint-build = "1.14.1"

[features]
default = []
ui = ["dep:slint"]
