[package]
name = "doxa-selector"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.8.0"
autons = { version = "0.2.0", default-features = false }
vexide-embedded-graphics = { git = "https://github.com/zabackary/vexide-embedded-graphics.git", branch = "patch/vexide-0.8.0" }

[dev-dependencies]
autons = "0.2.0"
vexide = { version = "0.8.0", features = [
  "full",
  "vex-sdk-jumptable",
  "vex-sdk-mock",
] }
