[package]
name = "doxa-selector"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
slot = 1
icon = "cool-x"
compress = true

[dependencies]
vexide = "0.8.0"
buoyant = { git = "https://github.com/zabackary/buoyant.git", branch = "patch", features = [
  "embedded-graphics",
] }
autons = { version = "0.2.0", default-features = false }
embedded-graphics = "0.8.1"
embedded-ttf = "0.2.2"
vexide-embedded-graphics = { git = "https://github.com/zabackary/vexide-embedded-graphics.git", branch = "patch/vexide-0.8.0" }
rusttype = "0.9.3"
embedded-touch = "0.3.0"
unwrap-infallible = { version = "1.0.0", features = ["never_type"] }

[dev-dependencies]
autons = "0.2.0"
vexide = { version = "0.8.0", features = [
  "full",
  "vex-sdk-jumptable",
  "vex-sdk-mock",
] }
